--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="City Name" spellcheck="false">
-            <button id="btn"><img src="image/search.png "></button>
+            <button id="btn"><img src="search.png "></button>
         </div>
             <div class="error">Invalid City Name</div>
                 
         <div class="weather">
             <div class="row">
-                <img src="image/clouds.png"width="224px" height="224px">
+                <img src="clouds.png"width="224px" height="224px">
                 <p class="temp">0°C</p>
                 <p class="city"> Undefined</p>
             </div>
             <div class="image-show">
               <span class="img1">
-                <img src="image/humidity.png"></span>
+                <img src="humidity.png"></span>
                 <p class="humidity">0%</p>
                 <p class="text1">Humidity</p>
                <span class="img2">
-                <img src="image/wind.png"></span>
+                <img src="wind.png"></span>
                 <p class="speed"> 0km/h</p>
                 <p class="text2"> Wind Speed</p>
 
