--- a/index.html
+++ b/index.html
@@ -9,35 +9,70 @@
 </head>
 
 <body>
-    <div class="card">
-        <div class="search">
-            <input type="text" placeholder="City Name" spellcheck="false">
-            <button id="btn"><img src="search.png "></button>
-        </div>
-            <div class="error">Invalid City Name</div>
-                
+
+    <nav>
+        <ul>
+            <li> Home</li>
+            <li> Weather</li>
+            <li> City</li>
+            <li> Help</li>
+        </ul>
+    </nav>
+
+    <div class="search">
+        <input type="text" placeholder="Enter City Name" spellcheck="true">
+        <button id="btn"><img src="image/search.png "></button>
+
+    </div>
+    <div class="error">Invalid City Name</div>
+
+
+    <div id="card">
+
         <div class="weather">
             <div class="row">
-                <img src="clouds.png"width="224px" height="224px">
-                <p class="temp">0°C</p>
-                <p class="city"> Undefined</p>
+                <img src="image/clouds.png" width="224px" height="224px">
+                <p class="typeofweather"> Clear</p>
+                <section id="time">
+
+                    <div id="today">
+                        Toady - <span id="timer"> 00.00.00 <span id="am">AM</span> </span>
+                    </div>
+                    <div class="date">
+                        Date <span id="fulldate"> 00.00.0000 </span>
+                    </div>
+
+                </section>
+                <section>
+                    <div class="temprature">
+                        <p class="feellike"> feels like <Span> </Span></p>
+
+                        <p class="temp">0°C</p>
+                        <p class="mintemp">Min Temp : <span class="min_temp"> 0°C </span></p>
+                        <p class="maxtemp">Max Temp : <span class="max_temp"> 0°C </span> </p>
+                    </div>
+                </section>
+                <section>
+                    <p class="city"></p>
             </div>
             <div class="image-show">
-              <span class="img1">
-                <img src="humidity.png"></span>
+                <span class="img1">
+                    <img src="image/humidity.png"></span>
                 <p class="humidity">0%</p>
                 <p class="text1">Humidity</p>
-               <span class="img2">
-                <img src="wind.png"></span>
+                <span class="img2">
+                    <img src="image/wind.png"></span>
                 <p class="speed"> 0km/h</p>
                 <p class="text2"> Wind Speed</p>
+                </section>
 
             </div>
         </div>
+
+
+
     </div>
     <script src="script.js"></script>
 </body>
 
 </html>
-
-
