--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="search">
         <input type="text" placeholder="Enter City Name" spellcheck="true">
-        <button id="btn"><img src="image/search.png "></button>
+        <button id="btn"><img src="search.png "></button>
 
     </div>
     <div class="error">Invalid City Name</div>
