--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             </div>
             <div class="image-show">
                 <span class="img1">
-                    <img src="image/humidity.png"></span>
+                    <img src="humidity.png"></span>
                 <p class="humidity">0%</p>
                 <p class="text1">Humidity</p>
                 <span class="img2">
-                    <img src="image/wind.png"></span>
+                    <img src="wind.png"></span>
                 <p class="speed"> 0km/h</p>
                 <p class="text2"> Wind Speed</p>
                 </section>
