--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="search">
         <input type="text" placeholder="Enter City Name" spellcheck="true">
-        <button id="btn"><img src="search.png "></button>
+        <button id="btn"><img src="image/search.png "></button>
 
     </div>
     <div class="error">Invalid City Name</div>
@@ -38,36 +38,37 @@
                     <div id="today">
                         Toady - <span id="timer"> 00.00.00 <span id="am">AM</span> </span>
                     </div>
-                    <div class="date">
-                        Date <span id="fulldate"> 00.00.0000 </span>
-                    </div>
-
-                </section>
-                <section>
-                    <div class="temprature">
-                        <p class="feellike"> feels like <Span> </Span></p>
-
-                        <p class="temp">0°C</p>
-                        <p class="mintemp">Min Temp : <span class="min_temp"> 0°C </span></p>
-                        <p class="maxtemp">Max Temp : <span class="max_temp"> 0°C </span> </p>
-                    </div>
-                </section>
-                <section>
-                    <p class="city"></p>
             </div>
-            <div class="image-show">
-                <span class="img1">
-                    <img src="humidity.png"></span>
-                <p class="humidity">0%</p>
-                <p class="text1">Humidity</p>
-                <span class="img2">
-                    <img src="wind.png"></span>
-                <p class="speed"> 0km/h</p>
-                <p class="text2"> Wind Speed</p>
-                </section>
+            </section>
+            <section class="s2">
+                <div class="temprature">
+                    <p class="feellike"> feels like <Span> </Span></p>
 
-            </div>
+                    <p class="temp">0°C</p>
+                    <div class="diffTemp">
+                    <p class="mintemp">Min Temp : <span class="min_temp"> 0°C </span></p>
+                    <p class="maxtemp">Max Temp : <span class="max_temp"> 0°C </span> </p>
+                </div>
+                </div>
+            </section>
+            <section class="s3">
+                <p class="city"></p>
+
+                <div class="image-show">
+                    <span class="img1">
+                        <img src="image/humidity.png">
+                        <p class="humidity">0%</p>
+                    </span>
+                    <p class="text1">Humidity</p>
+                    <span class="img2">
+                        <img src="image/wind.png">
+                        <p class="speed"> 0km/h</p>
+                    </span>
+                    <p class="text2"> Wind Speed</p>
+            </section>
+
         </div>
+    </div>
 
 
 
