--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="search">
         <input type="text" placeholder="Enter City Name" spellcheck="true">
-        <button id="btn"><img src="image/search.png "></button>
+        <button id="btn"><img src="search.png "></button>
 
     </div>
     <div class="error">Invalid City Name</div>
@@ -31,7 +31,7 @@
 
         <div class="weather">
             <div class="row">
-                <img src="image/clouds.png" width="224px" height="224px">
+                <img src="clouds.png" width="224px" height="224px">
                 <p class="typeofweather"> Clear</p>
                 <section id="time">
 
@@ -56,12 +56,12 @@
 
                 <div class="image-show">
                     <span class="img1">
-                        <img src="image/humidity.png">
+                        <img src="humidity.png">
                         <p class="humidity">0%</p>
                     </span>
                     <p class="text1">Humidity</p>
                     <span class="img2">
-                        <img src="image/wind.png">
+                        <img src="wind.png">
                         <p class="speed"> 0km/h</p>
                     </span>
                     <p class="text2"> Wind Speed</p>
