--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>weather app</title>
+    <meta name ="description" content ="Enter any city name and get instant, real-time weather updates including temperature, wind speed, humidity, and max/min temperatures. Stay informed with accurate weather conditions wherever you are!""
+    <title>Real-WeatherPulse-Time Weather Tracker: Get Live Temperature, Wind Speed, and More </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
