--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name ="description" content ="Enter any city name and get instant, real-time weather updates including temperature, wind speed, humidity, and max/min temperatures. Stay informed with accurate weather conditions wherever you are!""
-    <title>Real-WeatherPulse-Time Weather Tracker: Get Live Temperature, Wind Speed, and More </title>
+    <title> WeatherPulse- Real-Time Weather Tracker: Get Live Temperature, Wind Speed, and More </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
